[metadata]
name = autots
author = James Morrill
author-email = james.morrill.6@gmail.com
version = 0.0.1
summary = Automation for supervised time series problems
licence = MIT
description-file =
    README.md
long_description = file: README.md
long_description_content_type = text/markdown
requires-python = >=3.8

[files]
packages =
    autots

[tool:pytest]
# Ignore certain files
addopts =
    --ignore examples
    --ignore docs

[flake8]
# Default flake8 3.5 ignored flags
ignore = E121, E123, E126, E226, E24, E704, W503, W504
exclude = .git,*migrations*
max-line-length = 120
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203
